[tool.poetry]
name = "day-tracker"
version = "0.1.0"
description = ""
authors = ["Arslan Amanov <aamanov829@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
